# VMI-RAE-MCP-coincidense-DA-program

./: DAQ_file_explanation  FittingRoutine.py  INSTALL.md  README.md  main.py  setup.py
Source/: FittingRoutine.py
Source/Event Trig data/: CMakeLists.txt  main.cpp
Source/Load data/: main.cpp
Source/VMI Boot/: main.cpp
Source/VMI GIF/: main.cpp
Source/VMI filter/: CMakeLists.txt  main.cpp
